--- a/BaseForCode/app/src/main/res/values/strings.xml
+++ b/BaseForCode/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">BaseForCode</string>
+    <string name="title_activity_test">TestActivity</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="navigation_home">首页</string>
+    <string name="navigation_news">新闻</string>
+    <string name="navigation_app">应用</string>
+    <string name="navigation_settings">设置</string>
 </resources>
